--- a/package.json
+++ b/package.json
@@ -3,25 +3,43 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --check --ignore-path .gitignore .",
+    "format:write": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@dreyerx/dreyerxns-js": "^1.0.2",
+    "@rainbow-me/rainbowkit": "^2.2.1",
+    "@reduxjs/toolkit": "^2.5.0",
+    "@tanstack/react-query": "^5.62.7",
+    "@types/moment": "^2.11.29",
+    "jsbi": "^4.3.0",
+    "moment": "^2.30.1",
+    "motion": "^11.13.5",
+    "next": "15.0.4",
+    "pino-pretty": "^13.0.0",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.1"
+    "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
+    "viem": "^2.21.55",
+    "wagmi": "^2.14.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.4",
+    "eslint-config-prettier": "^9.1.0",
     "postcss": "^8",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.1",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.1",
-    "@eslint/eslintrc": "^3"
+    "typescript": "^5"
   }
 }
